# madr

./: .gitignore  Dockerfile  README.md  compose.yml  entrypoint.sh  env-sample  pyproject.toml
.github/workflows/: pipeline.yaml
madr/: app.py  database.py  models.py  schemas.py  security.py  settings.py  t_types.py
madr/routers/: auth.py  books.py  novelists.py  users.py
migrations/: env.py
migrations/versions/: 2443ed28c41c_create_novelists_table.py  73cc9eaa4d5d_added_relationship_between_books_and_.py  80fb286555c6_added_users_table.py  c88efda493e7_create_books_table.py
tests/: conftest.py  factories.py  test_app.py
tests/routers/: test_auth.py  test_books.py  test_novelists.py  test_users.py
